// $Id$
//-----------------------------------------------------------------------
// based on vpContact 0.711
// created and released for rogue / postnuke .711
//-----------------------------------------------------------------------
//
// formicula 0.1 (fs)
// replaced pnHTML output methd with smarty / pnRender for use in Postnuke 0.726 or later
// internal code changes and cleanups
// **********************************************
// * This version needs a working installation **
// *              of pnRender !!               **
// **********************************************
//
// formicula 0.2 (fs)
// adjusted code to run in XTE RC3 and later
//
// formicula 0.3 (fs)
// added file upload and sending as attachments
// replaced PEAR mail class with Mailer module from Postnuke .8 / .750 Gold. Formicula needs
// the pnuserapi.php v1.14 of the Mailer modules as minimum in order to be able to send
// uploaded files as file attachment
//
// Formicula 0.5 (rm)
// store contacts in separate database table
// optionally call a form with a contact id (cid) to select only this contact
// define public / private contacts, only public contacts will be listed in the form,
// but the form can also be used with a private contact id
//
// Formicula 0.6 (fs)
// added option to pass value to a template from other modues in addinfo array
// tested with .762 only - not sure if it still works with older versions of PostNuke (and I must admit that
// I don't care)
//
// Formicula 1.0 (fs)
// added option to define special name, email and subject to be used in users confirmation email
// In the subject you can user optional placeholders:
// %s = sitename
// %l = slogan
// %u = the sites url
// %n<num> = name of custom field #<num>
// %d<num> = data of custom field #<num>
// added form optional validation in form 0 (needs the AjaxSupportPackage from
// http://noc.postnuke.com/frs/?group_id=8)